<resources>
    <!--Notification-->
    <string name="stream_default_notification_channel_id">stream_GetStreamChat</string>
    <string name="stream_default_notification_channel_name">stream_GetStreamChat</string>
    <string name="stream_default_notification_read">Mark as read</string>
    <string name="stream_default_notification_reply">Reply</string>
    <string name="stream_default_notification_type">Type message</string>
    <string name="stream_default_notification_title">Chat message</string>
    <string name="stream_default_notification_message">You\'ve received new message</string>

    <!--Message Date-->
    <string name="stream_just_now">Just Now</string>
    <string name="stream_today">Today</string>
    <string name="stream_yesterday">Yesterday</string>
    <!--Chat-->
    <string name="stream_you">(you)</string>
    <!--MessageInput-->
    <string name="stream_input_hint">Write a message</string>
    <string name="stream_input_type_add_file">Add a file</string>
    <string name="stream_input_type_edit_message">Edit a message</string>
    <string name="stream_input_type_select_gallery">Select your photo or video</string>
    <string name="stream_input_type_select_file">Select your file</string>
    <string name="stream_input_type_command">Commands matching</string>
    <string name="stream_input_type_auto_mention">Searching for people</string>
    <string name="stream_input_camera_title">Capture Image or Video</string>
    <string name="stream_message_length_exceeded_error">"Max message length (%s) exceeded."</string>

    <string name="stream_permissions_camera_title">Camera and Storage Access Permission</string>
    <string name="stream_permissions_camera_message">Camera and storage access permissions are needed in order to be able to take photos and videos</string>
    <string name="stream_permissions_storage_title">Storage Access Permissions</string>
    <string name="stream_permissions_storage_message">Storage access permissions is needed in order to be able to send and save photos, videos, music and the other files</string>
    <string name="stream_permissions_setting_message">Enable permissions on App Settings</string>
    <string name="stream_permissions_setting_button">Settings</string>

    <string name="stream_input_upload_media">Upload a photo or video</string>
    <string name="stream_input_take_picture">Upload from a camera</string>
    <string name="stream_input_upload_file">Upload a file</string>
    <string name="stream_input_also_send_to_channel">Also send to channel</string>
    <!-- Folder Name -->
    <string name="stream_image">Images</string>
    <string name="stream_video">Video</string>
    <!-- Message Status -->
    <string name="stream_delete_message">This message was deleted.</string>
    <string name="stream_message_failed_send">MESSAGE FAILED ּ• CLICK TO TRY AGAIN</string>
    <string name="stream_message_failed_send_toast">Unable to send message</string>
    <string name="stream_message_failed_edit_toast">Unable to edit message</string>
    <string name="stream_message_invalid_command">UNSENT ּ• INVALID COMMAND</string>
    <string name="stream_message_invalid_response">Response or message is empty.</string>
    <!--Thread-->
    <plurals name="stream_reply_count">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <string name="stream_thread_separator">Start of a new thread</string>
    <!--Chat Screen-->
    <string name="stream_channel_unknown_title">Channel without name</string>
    <string name="stream_channel_offlineText">Waiting for network&#8230;</string>
    <string name="stream_channel_header_active">Active %s</string>
    <string name="stream_channel_header_active_now">just now</string>
    <!--Error-->
    <string name="stream_no_media_error">There is no photo or video.</string>
    <string name="stream_large_size_file_error">This file is too large to upload. The file size limit is 20MB.</string>
    <string name="stream_attachment_uploading_error">Unable to upload attachment.</string>
    <string name="stream_no_file_error">There is no file.</string>
    <string name="stream_take_photo_failed">Failed due to an unknown error.</string>
    <!--Last Message Type-->
    <string name="stream_last_message_attachment_photo">photo</string>
    <string name="stream_last_message_attachment_video">video</string>

    <string name="stream_last_message_attachment_giphy" translatable="false">/giphy</string>

    <!--Attachment View-->
    <string name="stream_attachment_load_failed_unknown">The load failed due to an unknown error.</string>
    <string name="stream_attachment_invalid_url">The load failed due to the invalid url.</string>
    <string name="stream_attachment_invalid_mime_type">Something went wrong. Unable to open attachment: %s</string>
    <!--Giphy send view-->
    <string name="stream_giphy_send">Send</string>
    <string name="stream_giphy_shuffle">Shuffle</string>
    <string name="stream_giphy_cancel">Cancel</string>

    <!--Channels list view -->
    <string name="stream_channels_empty_state_label">No channels available</string>

    <!-- Message list view -->
    <string name="stream_messages_empty_state_label">No messages</string>

</resources>
