<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/stream_attach_min_width"
    android:minHeight="@dimen/stream_attach_image_height">

    <com.getstream.sdk.chat.utils.roundedImageView.PorterShapeImageView
        android:id="@+id/ivMediaThumb"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/stream_attach_image_height"
        android:minWidth="@dimen/stream_attach_min_width"
        android:layout_marginStart="1px"
        android:layout_marginTop="1px"
        android:layout_marginEnd="1px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/ivCommandLogo"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_margin="10dp"
        android:background="@drawable/stream_ic_giphy"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivMediaThumb"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/tvMediaPlay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/stream_ic_videoplay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivMediaThumb"
        app:layout_constraintEnd_toEndOf="@+id/ivMediaThumb"
        app:layout_constraintStart_toStartOf="@+id/ivMediaThumb"
        app:layout_constraintTop_toTopOf="@+id/ivMediaThumb"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivMediaThumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivMediaThumb"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ivMediaThumb"
        app:layout_constraintStart_toStartOf="@+id/ivMediaThumb"
        app:layout_constraintTop_toBottomOf="@+id/ivMediaThumb"
        >

        <TextView
            android:id="@+id/tvMediaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvMediaDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMediaTitle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAction"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMediaThumb"
        >

        <TextView
            android:id="@+id/tvActionSend"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/stream_giphy_send"
            android:textColor="@color/stream_white"
            app:layout_constraintEnd_toStartOf="@+id/tvActionShuffle"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvActionShuffle"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/stream_giphy_shuffle"
            app:layout_constraintEnd_toStartOf="@+id/tvActionCancel"
            app:layout_constraintStart_toEndOf="@+id/tvActionSend"
            />

        <TextView
            android:id="@+id/tvActionCancel"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/stream_giphy_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvActionShuffle"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
